# sample-db-engine

./: .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  ImHex.hexpat  README.md
.github/workflows/: ci.yml
src/: aliases.rs  connection.rs  engine-demo.rs  lib.rs  main.rs
src/btree/: constants.rs  mod.rs
src/btree/iterator/: mod.rs
src/btree/node/: common.rs  debugger.rs  header.rs  helpers.rs  internal.rs  internal_iterator.rs  key_reference.rs  key_reference_internal.rs  key_reference_leaf.rs  leaf.rs  leaf_iterator.rs  mod.rs
src/btree/operations/: check_contract.rs  initialize.rs  insert.rs  mod.rs
src/btree/operations/helpers/: compute_dividers.rs  mod.rs  propagate_high_key_change.rs
src/btree/persistance/: loader.rs  mod.rs  saver.rs
src/btree/structures/: mod.rs  paged_node.rs  tree_breadcrumbs.rs
src/helpers/: average.rs  binary_search.rs  div_ceil.rs  encoder.rs  mod.rs
src/pager/: constants.rs  db_header.rs  errors.rs  initializer.rs  mod.rs  page.rs  persistance.rs
tests/: integration_test.rs
