[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[features]
integration = []

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
bincode = "2.0.0-rc.2"
rand = "0.8.5"

[dev-dependencies]
lazy_static = "1.4.0"

[dev-dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "engine-demo"
path = "src/engine-demo.rs"
